link styles & scripts

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Bootstrap Template From Bagcampus - An Amazing Header 01 - Document</title>
+
+    <!-- link styles & scripts -->
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="script/script.js"></script>
 </head>
 <body>
-    
+
 </body>
 </html>
