--- a/index.html
+++ b/index.html
@@ -21,6 +21,63 @@
 
 </head>
 <body>
+<header id="header">
+    <section id="nav">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-dark sticky-top" onscroll="nav()">
+                <a class="navbar-brand text-white" href="#">LOGO</a>
 
+                <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mr-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+                            <!-- Button trigger modal -->
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" data-toggle="modal" data-target="#login">
+                                Login
+                            </a>
+                        </li>
+
+                        <!-- Button trigger modal -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white" data-toggle="modal" data-target="#register">
+                                Register
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </section>
+    <section id="head">
+        <div class="container-fluid head-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1> We promise to bring
+                            the best <span>solution</span> for
+                            your business.
+                        </h1>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In rhoncus turpis nisl. </p>
+                        <a href="#">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card bg-transparent">
+                            <img class="card-img-top img-fluid mx-auto d-block mr-auto"
+                                src="images/undraw_Mobile_marketing_re_p77p.svg" alt="Mobile">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</header>
 </body>
 </html>
